log
Tue 05 Sep 2023 02:11:42 AM UTC: 
 tests:  0|6
total_score: 0/70
e374038
Tue 05 Sep 2023 02:31:41 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:66:1: error: control reaches end of non-void function [-Werror=return-type]
   66 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9f1b4af
Tue 05 Sep 2023 02:31:53 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:65:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   65 |   map->currentIndex = -1
      |      ^~
hashmap.c:65:25: error: expected ‘;’ before ‘return’
   65 |   map->currentIndex = -1
      |                         ^
      |                         ;
   66 |   return map;
      |   ~~~~~~                 
hashmap.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
   67 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
257b2ec
Tue 05 Sep 2023 02:32:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘size’ undeclared (first use in this function)
   59 |   map->size = size;
      |               ^~~~
hashmap.c:59:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:60:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:60:17: error: ‘Cube’ undeclared (first use in this function)
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:60:22: error: expected expression before ‘)’ token
   60 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:61:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   61 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:65:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   65 |   map->currentIndex = -1;
      |      ^~
Compilation failed
f1984de
Tue 05 Sep 2023 02:34:21 AM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:15: error: ‘size’ undeclared (first use in this function)
   56 |   map->size = size;
      |               ^~~~
hashmap.c:56:15: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:57:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   57 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |      ^~
hashmap.c:57:17: error: ‘Cube’ undeclared (first use in this function)
   57 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                 ^~~~
hashmap.c:57:22: error: expected expression before ‘)’ token
   57 |   map->cubes = (Cube*)malloc(sizeof(Cube) * size);
      |                      ^
hashmap.c:58:10: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘cubes’
   58 |   if (map->cubes == NULL) {
      |          ^~
hashmap.c:62:6: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘currentIndex’
   62 |   map->currentIndex = -1;
      |      ^~
Compilation failed
50903cf
